<resources>
    <string name="app_name">AroundHere</string>
    <string name="place_opening">Opening</string>
    <string name="place_closed">Closed</string>
    <string name="sample_search_count">Found %1d result within 1km</string>
    <string name="sample_photo">https://images.foody.vn/res/g2/12699/prof/s640x400/foody-upload-api-foody-mobile-bcg-jpg-180604131834.jpg</string>
    <string name="sample_address">5 Ngõ 28 Ngụy Như Kon Tum</string>
    <string name="sample_title">Canh Cá Rô Tứ Thân</string>
    <string name="tab_discover">Discover</string>
    <string name="tab_favorites">Favorites</string>
    <string name="tab_settings">Settings</string>
    <string name="search_hint">Search something</string>
    <string name="quick_search_restaurant_text">Restaurant</string>
    <string name="quick_search_coffee_text">Coffee</string>
    <string name="quick_search_beer_text">Beer</string>
    <string name="quick_search_game_text">Game</string>
    <string name="sample_distance">200m</string>
    <string name="sample_open_status">Opening</string>
    <string name="place_info_more_text">View More</string>
    <string name="place_info_distance">%1.2fkm</string>
    <string name="place_detail_price_title">Price range:</string>
    <string name="place_detail_time_title">Open time:</string>
    <string name="place_detail_menu_title">MENU</string>
    <string name="place_detail_review_title">REVIEWS</string>
    <string name="sample_item_review_name">Kyoshiro</string>
    <string name="sample_item_review_time">2 hours ago</string>
    <string name="sample_item_review_content">Đồ ăn được, phục vụ tốt, thời gian phục vụ rất nhanh. Thêm nữa là view rất đẹp. Chấm 5 sao</string>
    <string name="sample_item_review_score">3.2</string>
    <string name="place_detail_button_checkin">CHECK IN</string>
    <string name="default_price">No information</string>
    <string name="default_time">No information</string>
    <string name="place_info_price">%,d - %,d đ</string>
    <string name="place_info_time">%1s - %2s</string>
    <string name="place_detail_no_review">No review yet. Please check back later</string>
    <string name="place_detail_visited">Visited %s</string>
    <string name="place_detail_favorite_added">Added to Favorites</string>
    <string name="place_detail_favorite_removed">Removed from Favorites</string>
    <string name="place_detail_visited_added">Added to Visited Places</string>
    <string name="place_detail_visited_removed">Removed from Visited Places</string>
    <string name="place_detail_unknown_update_code">Unknown update code</string>
    <string name="searchable_authority">com.trunghoang.aroundhere.service.SearchProvider</string>
    <string name="favorites_title_favorites">Favorites</string>
    <string name="favorites_title_visited">Visited Places</string>
    <string name="local_loading_error">Something wrong with local database</string>
    <string name="discover_title_awesome_places">Discover Awesome Places</string>
    <string name="discover_title_near_you">Near You</string>
</resources>
