<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/coordinator_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.AppBarLayout
        android:id="@+id/appbar"
        android:layout_width="match_parent"
        android:layout_height="@dimen/place_detail_cover"
        android:fitsSystemWindows="true"
        android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar">

        <android.support.design.widget.CollapsingToolbarLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:fitsSystemWindows="true"
            app:contentScrim="?attr/colorPrimary"
            app:layout_scrollFlags="scroll|exitUntilCollapsed"
            app:layout_scrollInterpolator="@android:anim/decelerate_interpolator"
            app:toolbarId="@+id/toolbar">

            <ImageView
                android:id="@+id/app_bar_image"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:fitsSystemWindows="true"
                android:scaleType="centerCrop"
                android:src="@android:drawable/sym_def_app_icon"
                app:layout_collapseMode="parallax"
                tools:srcCompat="@tools:sample/backgrounds/scenic[2]" />

            <include layout="@layout/toolbar" />

        </android.support.design.widget.CollapsingToolbarLayout>
    </android.support.design.widget.AppBarLayout>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="@dimen/place_detail_scroll_margin_bottom"
        app:layout_behavior="android.support.design.widget.AppBarLayout$ScrollingViewBehavior">

        <android.support.constraint.ConstraintLayout
            android:id="@+id/constraint_container"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            tools:context=".ui.place.PlaceFragment">

            <TextView
                android:id="@+id/text_title"
                style="@style/TitlePlace"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/place_detail_bound_margin_horizontal"
                android:layout_marginLeft="@dimen/place_detail_bound_margin_horizontal"
                android:layout_marginTop="@dimen/place_detail_title_margin_top"
                android:layout_marginEnd="@dimen/place_detail_bound_margin_horizontal"
                android:layout_marginRight="@dimen/place_detail_bound_margin_horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                tools:text="@string/sample_title" />

            <TextView
                android:id="@+id/text_address"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/place_info_address_margin_top"
                app:layout_constraintEnd_toEndOf="@+id/text_title"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="@+id/text_title"
                app:layout_constraintTop_toBottomOf="@+id/text_title"
                tools:text="@string/sample_address" />

            <ImageView
                android:id="@+id/image_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/place_detail_main_info_margin_vertical"
                app:layout_constraintStart_toStartOf="@+id/text_address"
                app:layout_constraintTop_toBottomOf="@+id/text_address"
                app:srcCompat="@drawable/ic_distance" />

            <TextView
                android:id="@+id/text_distance"
                style="@style/MainInfoPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/place_detail_margin_left"
                android:layout_marginLeft="@dimen/place_detail_margin_left"
                app:layout_constraintBottom_toBottomOf="@+id/image_distance"
                app:layout_constraintStart_toEndOf="@+id/image_distance"
                app:layout_constraintTop_toTopOf="@+id/image_distance"
                tools:text="@string/sample_distance" />

            <TextView
                android:id="@+id/text_is_open"
                style="@style/MainInfoPlace"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/place_detail_margin_left"
                android:layout_marginLeft="@dimen/place_detail_margin_left"
                android:layout_marginEnd="@dimen/place_detail_bound_margin_horizontal"
                android:layout_marginRight="@dimen/place_detail_bound_margin_horizontal"
                app:layout_constraintBottom_toBottomOf="@+id/text_distance"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toEndOf="@+id/image_divider"
                app:layout_constraintTop_toTopOf="@+id/text_distance"
                tools:text="@string/sample_open_status" />

            <ImageView
                android:id="@+id/image_divider"
                android:layout_width="@dimen/place_info_distance_divider_size"
                android:layout_height="@dimen/place_info_distance_divider_size"
                android:layout_marginStart="@dimen/place_info_margin_left"
                android:layout_marginLeft="@dimen/place_info_margin_left"
                app:layout_constraintBottom_toBottomOf="@+id/text_distance"
                app:layout_constraintStart_toEndOf="@+id/text_distance"
                app:layout_constraintTop_toTopOf="@+id/text_distance"
                app:srcCompat="@drawable/ic_dot_divider" />

            <ImageView
                android:id="@+id/image_price"
                android:layout_width="@dimen/place_detail_title_icon_size"
                android:layout_height="@dimen/place_detail_title_icon_size"
                android:layout_marginTop="@dimen/place_detail_main_info_margin_vertical"
                app:layout_constraintStart_toStartOf="@+id/image_distance"
                app:layout_constraintTop_toBottomOf="@+id/image_distance"
                app:srcCompat="@drawable/ic_place_cash" />

            <TextView
                android:id="@+id/text_price_title"
                style="@style/SubTitlePlaceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/place_detail_margin_left"
                android:layout_marginLeft="@dimen/place_detail_margin_left"
                android:text="@string/place_detail_price_title"
                app:layout_constraintBottom_toBottomOf="@+id/image_price"
                app:layout_constraintStart_toEndOf="@+id/image_price"
                app:layout_constraintTop_toTopOf="@+id/image_price" />

            <TextView
                android:id="@+id/text_price"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/place_detail_margin_top"
                app:layout_constraintStart_toStartOf="@+id/image_price"
                app:layout_constraintTop_toBottomOf="@+id/image_price"
                tools:text="@string/default_price" />

            <ImageView
                android:id="@+id/image_time"
                android:layout_width="@dimen/place_detail_title_icon_size"
                android:layout_height="@dimen/place_detail_title_icon_size"
                android:layout_marginTop="@dimen/place_detail_margin_top"
                app:layout_constraintStart_toStartOf="@+id/text_price"
                app:layout_constraintTop_toBottomOf="@+id/text_price"
                app:srcCompat="@drawable/ic_place_time" />

            <TextView
                android:id="@+id/text_time_title"
                style="@style/SubTitlePlaceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/place_detail_margin_left"
                android:layout_marginLeft="@dimen/place_detail_margin_left"
                android:text="@string/place_detail_time_title"
                app:layout_constraintBottom_toBottomOf="@+id/image_time"
                app:layout_constraintStart_toEndOf="@+id/image_time"
                app:layout_constraintTop_toTopOf="@+id/image_time" />

            <TextView
                android:id="@+id/text_time"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/place_detail_margin_top"
                app:layout_constraintStart_toStartOf="@+id/image_time"
                app:layout_constraintTop_toBottomOf="@+id/image_time"
                tools:text="@string/default_time" />

            <TextView
                android:id="@+id/text_review_title"
                style="@style/SubTitlePlaceDetail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/place_detail_main_info_margin_vertical"
                android:text="@string/place_detail_review_title"
                app:layout_constraintStart_toStartOf="@+id/text_time"
                app:layout_constraintTop_toBottomOf="@+id/text_time" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/recycler_review"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/place_detail_margin_left"
                android:layout_marginLeft="@dimen/place_detail_margin_left"
                android:layout_marginTop="@dimen/place_detail_margin_top"
                android:layout_marginEnd="@dimen/place_detail_reviews_margin_right"
                android:layout_marginRight="@dimen/place_detail_reviews_margin_right"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="@+id/text_review_title"
                app:layout_constraintTop_toBottomOf="@+id/text_review_title"
                tools:listitem="@layout/item_reviews" />

            <TextView
                android:id="@+id/text_no_reviews"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/place_detail_margin_left"
                android:layout_marginLeft="@dimen/place_detail_margin_left"
                android:layout_marginTop="@dimen/place_detail_main_info_margin_vertical"
                android:text="@string/place_detail_no_review"
                android:visibility="gone"
                app:layout_constraintStart_toStartOf="@+id/text_review_title"
                app:layout_constraintTop_toBottomOf="@+id/text_review_title" />

            <ProgressBar
                android:id="@+id/progress_reviews"
                style="?android:attr/progressBarStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/place_detail_margin_top"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/text_review_title" />

        </android.support.constraint.ConstraintLayout>
    </android.support.v4.widget.NestedScrollView>

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/float_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/place_detail_reviews_margin_right"
        android:clickable="true"
        android:focusable="true"
        app:backgroundTint="@color/colorDimBackground"
        app:layout_anchor="@id/appbar"
        app:layout_anchorGravity="bottom|end"
        app:srcCompat="@drawable/ic_discover_favorite" />

    <Button
        android:id="@+id/button_checkin"
        style="@style/PlaceDetailCheckinButton"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:text="@string/place_detail_button_checkin"
        app:layout_insetEdge="top" />

</android.support.design.widget.CoordinatorLayout>
