<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/colorBackgroundSection"
    android:paddingBottom="@dimen/place_info_bound_margin_vertical">

    <ImageView
        android:id="@+id/image_place_photo"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:adjustViewBounds="true"
        android:cropToPadding="true"
        android:scaleType="fitCenter"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@tools:sample/backgrounds/scenic[0]" />

    <TextView
        android:id="@+id/text_distance"
        style="@style/MainInfoPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/place_info_margin_left"
        android:layout_marginLeft="@dimen/place_info_margin_left"
        app:layout_constraintBottom_toBottomOf="@+id/image_distance"
        app:layout_constraintStart_toEndOf="@+id/image_distance"
        app:layout_constraintTop_toTopOf="@+id/image_distance"
        tools:text="@string/sample_distance" />

    <TextView
        android:id="@+id/text_is_open"
        style="@style/MainInfoPlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/place_info_margin_left"
        android:layout_marginLeft="@dimen/place_info_margin_left"
        android:layout_marginEnd="@dimen/place_info_bound_margin_horizontal"
        android:layout_marginRight="@dimen/place_info_bound_margin_horizontal"
        app:layout_constraintBottom_toBottomOf="@+id/text_distance"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/image_divider"
        app:layout_constraintTop_toTopOf="@+id/text_distance"
        tools:text="@string/sample_open_status" />

    <ImageView
        android:id="@+id/image_distance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/place_info_bound_margin_horizontal"
        android:layout_marginLeft="@dimen/place_info_bound_margin_horizontal"
        android:layout_marginTop="@dimen/place_info_bound_margin_vertical"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/image_place_photo"
        app:srcCompat="@drawable/ic_distance" />

    <ImageView
        android:id="@+id/image_divider"
        android:layout_width="@dimen/place_info_distance_divider_size"
        android:layout_height="@dimen/place_info_distance_divider_size"
        android:layout_marginStart="@dimen/place_info_margin_left"
        android:layout_marginLeft="@dimen/place_info_margin_left"
        app:layout_constraintBottom_toBottomOf="@+id/text_distance"
        app:layout_constraintStart_toEndOf="@+id/text_distance"
        app:layout_constraintTop_toTopOf="@+id/text_distance"
        app:srcCompat="@drawable/ic_dot_divider" />

    <TextView
        android:id="@+id/text_title"
        style="@style/TitlePlace"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/place_info_title_margin_top"
        android:layout_marginEnd="@dimen/place_info_bound_margin_horizontal"
        android:layout_marginRight="@dimen/place_info_bound_margin_horizontal"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/image_distance"
        app:layout_constraintTop_toBottomOf="@+id/image_distance"
        tools:text="@string/sample_title" />

    <TextView
        android:id="@+id/text_address"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/place_info_address_margin_top"
        android:maxLines="1"
        app:layout_constraintEnd_toEndOf="@+id/text_title"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/text_title"
        app:layout_constraintTop_toBottomOf="@+id/text_title"
        tools:text="@string/sample_address" />

    <TextView
        android:id="@+id/text_more"
        style="@style/MorePlace"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/place_info_more_margin_top"
        android:text="@string/place_info_more_text"
        app:layout_constraintStart_toStartOf="@+id/text_address"
        app:layout_constraintTop_toBottomOf="@+id/text_address" />

    <ImageView
        android:id="@+id/image_more"
        android:layout_width="@dimen/place_info_more_icon_size"
        android:layout_height="@dimen/place_info_more_icon_size"
        android:layout_marginStart="@dimen/place_info_margin_left"
        android:layout_marginLeft="@dimen/place_info_margin_left"
        app:layout_constraintBottom_toBottomOf="@+id/text_more"
        app:layout_constraintStart_toEndOf="@+id/text_more"
        app:layout_constraintTop_toTopOf="@+id/text_more"
        app:srcCompat="@drawable/ic_view_more" />

    <ImageView
        android:id="@+id/image_favorite"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/text_more"
        app:layout_constraintEnd_toEndOf="@+id/text_title"
        app:layout_constraintTop_toTopOf="@+id/text_more"
        app:srcCompat="@drawable/ic_discover_favorite" />

</android.support.constraint.ConstraintLayout>
